crates/frontend/tests/type_errors/ty_arg_count_mismatch.nemo
fn func[a, b](x : a) -> a {
  x
}

struct Box[a, b] {
  a : a,
  b : b
}

variant List[a] {
  struct Nil {}
}

fn main() -> i32 {
  let x : Box = Box#[i32, i32]{ a = 1, b = 2 };
  let x : Box[i32] = Box#[i32, i32]{ a = 1, b = 2 };
  func#[i32](3);
  Box#[i32] { a = 1, b = 2 };
  List::Nil#[i32, f32] {};
  10
}
